--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "watch": "nodemon index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf build && cd ../fullstackopen_part3_frontend && npm run build --prod && cp -r build ../fullstackopen_part3",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
+    "logs:prod": "heroku logs --tail"
   },
   "author": "Julio David",
   "license": "MIT",
